# VariDex

./: .flake8  .gitignore  .secrets.baseline  .secretsignore  =5.0.0  ACMG_28_IMPLEMENTATION_GUIDE.md  ALL_TEST_FILES_FIX_COMPLETE.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CI_CD_COMPLETION_SUMMARY.md  CI_CD_FIXES_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  COVERAGE_90_PERCENT_ACHIEVEMENT.md  COVERAGE_COMPLETE_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DOCUMENTATION_100_PERCENT_PLAN.md  DOCUMENTATION_INITIATIVE_SUMMARY.md  ENGINE_FIXES_SUMMARY.md  FINAL.txt  FINAL_RESULTS.txt  IMPORT_FIXES.md  LICENSE  MANIFEST.in  NEXT_STEPS_ACTION_PLAN.md  OPTIMIZATION_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_SUMMARY.md  README.md  README_REWRITE_SUMMARY.md  RELEASE_NOTES_v7.0.3.md  RELEASE_NOTES_v7.2.0_dev.md  RESTORATION_README.md  RESULTS.txt  TESTING_QUICK_REFERENCE.md  TEST_FILES_BATCH_CHECK_COMPLETE.md  TEST_FILES_FIX_SUMMARY.md  TEST_SUITE_EXPANSION_SUMMARY.md  TEST_SUITE_FINALIZATION_REPORT.md  VARIDEX_COMPLETE_ACMG_IMPLEMENTATION.md  (+129 more)
.cleanup_backup_20260120_210646/: test_installation.sh
.cleanup_backup_20260120_210646/varidex/: __init__.py  _imports.py
.github/: CI_CD_GUIDE.md  SETUP_GUIDE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: badges.yml  cd.yml  ci-enhanced.yml  ci.yml  dependency-updates.yml  release.yml  security.yml  test.yml
.hypothesis/constants/: 007444824a649b18  0d77b221cef1f48a  0e66abb4057b90b5  11357118a7e39f84  2403176e077d86dc  2525290c61d92b32  2fc430ee2448aa6e  32e3bc64a3c284e6  334731c859421122  39b2009b5d8b7bda  50ce37e8e3e4e773  51affe4aed21161e  5f6b09ec2240a079  6021a0a42ddef2fa  67b0a8ccf18bf5d2  68eabd1f80bf88cf  7ceae16f7d60da73  84145c2a820128ed  8b67e299ac3d46ff  979ef90454291176  98511a61d98868b4  9b4d97ef101ccc45  9c4f3287426a829b  a3bea417e3c8dbf0  a66e8466e3c2d607  a6f9bf4b9d3b4cb2  a7b991865544ce27  b9d1d21ad61561f8  bb2399853f0fb7c4  cc973dceb9a68bb8  d9cbabba8ef7c909  dba47eb9d2281636  e553c80a46938c9e  e71a3c8b7effdea3  f58ee7047a28073b  fc4ec30842b23091  fd3aeeacd5494af3  fdc952ea3591e9b4
docs/: 01_overview.md  02_file_splits.md  03_version_unification.md  04_security_fixes.md  05_testing_deployment.md  ACMG_28_IMPLEMENTATION_GUIDE.md  ACMG_DATA_REQUIREMENTS.md  ACMG_v4_Implementation_Proposal.md  BUGFIX_V6.5.1.md  CHANGELOG.md  CI_CD_PIPELINE.md  COMMERCIAL_LICENSE_QUICK_REFERENCE.md  CONTRIBUTING.md  COVERAGE_IMPROVEMENT_GUIDE.md  FILE_SPLITTING_GUIDE_INTEGRATED.md  FINAL_FIX_SUMMARY_V6.5.3.md  GNOMAD_FIXES_v6.5.0.md  GNOMAD_INTEGRATION_GUIDE.md  GNOMAD_INTEGRATION_SUMMARY.md  GNOMAD_PARALLEL_WORKERS.md  GNOMAD_SETUP.md  LIFTOVER.md  LIFTOVER_GUIDE.md  LIFTOVER_INTEGRATION.md  MATCHING_IMPROVEMENTS_V6.5.md  MEMORY_OPTIMIZATION.md  MYPY_COMPLIANCE_REPORT.md  MYPY_ERRORS_FIX.md  MYPY_SETUP.md  PHASE1_COMPLETE.md  PHASE2_PHASE3_COMPLETE.md  QUICK_FIX_REFERENCE.md  QUICK_SUMMARY.md  README.md  RESTORATION_GUIDE.md  SECRET_SCANNING_SETUP.md  STATUS_SUMMARY.md  TESTING.md  TEST_SUITE_EXPANSION.md  VARIDEX_CODE_STANDARDS.md  (+6 more)
examples/: README.md  annotate_clinvar_with_gnomad.py  liftover_and_analyze.sh
final_test/: PRIORITY_PM2.csv  results_13codes.csv
scripts/: add_consequence_criteria.py  analyze_pathogenic.py  annotate_with_gnomad.py  annotate_with_gnomad_FAST.py  annotate_with_gnomad_auto.py  annotate_with_gnomad_fixed.py  annotate_with_gnomad_sequential_optimized.py  apply-config-fixes.sh  check_ci_status.sh  check_documentation.sh  cleanup_repository.sh  debug-matcher.sh  fix-all-dev-v2.sh  full-test-run.sh  generate_clinical_report.py  quick-matcher-fix.sh  restore_varidex.sh  test-module.sh  verify_setup.py
src/: models.py  validators.py
src/annotation/: __init__.py  annotator.py
src/core/: models.py
src/pipeline/: variant_processor.broken  variant_processor.py
src/reporting/: __init__.py  cli.py  core.py  models.py
tests/: TEST_SUITE_EXPANSION_SUMMARY.md  _test_pipeline_stages.py.disabled  conftest.py  stubs.py  test_acmg_classification.py  test_cli_interface.py  test_core_config.py  test_core_models.py  test_coverage_boost_error_handlers.py  test_coverage_boost_integration_paths.py  test_coverage_boost_validation.py  test_coverage_gaps.py  test_data_validation.py  test_dbnsfp_integration.py  test_downloader.py  test_edge_cases.py  test_error_recovery.py  test_exceptions.py  test_gnomad_integration.py  test_gnomad_integration.py.bak  test_integration_e2e.py  test_io_matching.py  test_liftover.py  test_performance_benchmarks.py  test_pipeline.py  test_pipeline_orchestrator.py  test_pipeline_stages.py  test_pipeline_validators.py  test_property_based.py  test_reports_generator.py  test_stubs.py  test_utils_helpers.py
tests/annotation/: test_annotator.py
tests/data/: chunk_mock.py  large_test.vcf  user_23andme.tsv  user_sample.tsv  user_sample_full.tsv
tests/fixtures/: test_stubs.py
tests/reporting/: conftest.py  test_cli.py  test_core.py  test_data.py  test_integration.py
varidex/: __init__.py  __init__.py.bak  __init__.py.broken  __main__.py  __main__.py.19code_backup  _imports.py  cli.py  downloader.py  downloader.py.bak  exceptions.py  exceptions.py.backup  exceptions.py.bak  gnomad_stage.py  pipeline_config.py  pipeline_main_integrated.py  version.py
varidex/acmg/: criteria.py  criteria.py.bak  criteria_PS3_PP2.py  criteria_ba4.py  criteria_ba4_bp2.py  criteria_pm1.py  criteria_pm3.py  criteria_pm5.py  criteria_pp3_bp4.py  criteria_ps1.py  dbnsfp_annotator.py  dbnsfp_gpu_annotator.py  fix_alphamissense.py  frequency_criteria.py  insert_pm1_fixed.sh  ps1_evaluator.py  splice.py  splice.py.bak  test_ps3_pp2.py  v2_complete.py
varidex/core/: __init__.py  config.py  config.py.bak  exceptions.py  exceptions.py.backup  exceptions.py.bak  models.py  models.py.backup  models.py.bak  models.py.before_validate_param  models_back.py  models_back.py.bak  schema.py  schema.py.bak
varidex/integrations/: __init__.py  __init__.py.bak  dbnsfp_client.py  dbnsfp_client.py.bak  gnomad_annotator.py  gnomad_client.py  gnomad_client.py.bak
(+148 files in other folders)
