[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "varidex"
version = "6.0.0"
description = "ACMG variant classification pipeline for genomic data analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPL-3.0-or-later OR Commercial"}
authors = [
    {name = "VariDex Development Team", email = "licensing@varidex.com"}
]
keywords = [
    "genomics",
    "variant-classification",
    "ACMG",
    "ClinVar",
    "bioinformatics",
    "genetics",
    "variant-analysis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/Plantucha/VariDex"
Documentation = "https://github.com/Plantucha/VariDex#readme"
Repository = "https://github.com/Plantucha/VariDex"
Issues = "https://github.com/Plantucha/VariDex/issues"
Changelog = "https://github.com/Plantucha/VariDex/releases"

[project.scripts]
varidex = "varidex.pipeline.orchestrator:main"

[tool.setuptools]
packages = ["varidex"]

[tool.setuptools.package-data]
varidex = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "smoke: Quick smoke tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
