[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "varidex"
version = "7.0.3"
description = "Variant Data Extraction and Classification System for ACMG 2015-compliant variant classification"
authors = [
    {name = "VariDex Development Team", email = "plantucha@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = ["genomics", "variant", "classification", "ACMG", "ClinVar", "bioinformatics"]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "psutil>=5.8.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "click>=8.0.0",
    "hypothesis>=6.0.0",
    "pyarrow>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.0.0",
    "isort>=5.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "hypothesis>=6.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Plantucha/VariDex"
Documentation = "https://github.com/Plantucha/VariDex/blob/main/README.md"
"Bug Tracker" = "https://github.com/Plantucha/VariDex/issues"
"Source Code" = "https://github.com/Plantucha/VariDex"

# ============================================================================
# DOCUMENTATION TOOLS CONFIGURATION
# ============================================================================

[tool.interrogate]
# Docstring coverage checker - Target: 100% coverage
ignore-init-method = true          # Don't require docstrings for __init__
ignore-init-module = false         # DO require module docstrings in __init__.py
ignore-magic = false               # DO require docstrings for magic methods
ignore-semiprivate = false         # DO require docstrings for _methods
ignore-private = false             # DO require docstrings for __methods
ignore-property-decorators = false # DO require docstrings for @property
ignore-module = false              # DO require module docstrings
ignore-nested-functions = false    # DO require docstrings for nested functions
ignore-nested-classes = false      # DO require docstrings for nested classes
ignore-setters = false             # DO require docstrings for setters
fail-under = 100                   # Fail if coverage is below 100%
exclude = ["setup.py", "docs", "build", "dist", "tests", ".git", ".github"]
ignore-regex = []                  # No regex ignores
extensions = ["py"]                # Only check .py files
verbose = 2                        # Verbose output level
quiet = false                      # Don't suppress output
whitelist-regex = []               # No whitelist
color = true                       # Use colored output
omit-covered-files = false         # Show all files
generate-badge = "."               # Generate coverage badge
badge-format = "svg"               # Badge format

[tool.pydocstyle]
# Docstring style checker - Google style
convention = "google"              # Use Google-style docstrings
match = "(?!test_).*\\.py"         # Match all .py files except tests
match-dir = "(?!tests|docs|build|dist|\\.git).*"  # Skip these directories
add-ignore = [
    "D100",  # Missing docstring in public module (handled by interrogate)
    "D104",  # Missing docstring in public package (handled by interrogate)
]

# ============================================================================
# CODE FORMATTING AND LINTING
# ============================================================================

[tool.black]
target-version = ['py39', 'py310', 'py311', 'py312']
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [".git", "__pycache__", "docs", "build", "dist", ".venv", ".tox"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when ready
disallow_incomplete_defs = false  # Set to true when ready
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ============================================================================
# TESTING CONFIGURATION
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    --verbose
    --strict-markers
    --strict-config
    --tb=short
    --cov=varidex
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-fail-under=90
"""
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Tests that take a long time",
    "requires_data: Tests that require external data files",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["varidex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/dist-packages/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# PACKAGE CONFIGURATION
# ============================================================================

[tool.setuptools]
packages = ["varidex"]
include-package-data = true

[tool.setuptools.package-data]
varidex = ["py.typed"]
